<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40px"
        android:text="@string/nomeEmpresa"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etNome"
        android:layout_width="600px"
        android:layout_height="wrap_content"
        android:hint="@string/hNomeEmpresa"/>
    <TextView
        android:layout_width="wrap_content"
        android:textSize="40px"
        android:layout_height="wrap_content"
        android:text="Razão Social"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etRazaoSocial"
        android:layout_width="600px"
        android:layout_height="wrap_content"
        android:hint="@string/hRazaoSocial"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40px"
        android:text="CNPJ"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etCnpj"
        android:layout_width="600px"
        android:layout_height="wrap_content"
        android:hint="@string/hCnpj"/>
    <TextView
        android:layout_width="wrap_content"
        android:textSize="40px"
        android:layout_height="wrap_content"
        android:text="E-mail"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="600px"
        android:layout_height="wrap_content"
        android:hint="@string/hEmail"/>
    <Button
        android:layout_width="600px"
        android:layout_height="wrap_content"
        android:text="@string/bAnexarFoto"/>
    <Button
        android:layout_width="600px"
        android:layout_height="wrap_content"
        android:text="@string/bRealizarCadastro"/>

</LinearLayout>